# fewmol

./: .gitignore  README.md  pyproject.toml  setup.cfg
fewmol/: _version.py
fewmol/data/: __init__.py  dataset.py  evaluate.py  master.csv  mol.py  test_mol.py
fewmol/model/: __init__.py  conv.py  gnn.py
fewmol/utils/: __init__.py  data_utils.py  distance_utils.py  io_utils.py  test_data_utils.py  test_distance_utils.py  test_io_utils.py  train_utils.py
notebooks/: analysis.ipynb  debugging.ipynb  evaluate.ipynb
scripts/: debug_run.py  finetune.py  finetune_k_neighbors.py  finetune_v2.py  training.py
